fix: submit button being overlapped

--- a/css/style.css
+++ b/css/style.css
@@ -446,7 +446,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  height: 300px;
+  height: max-content;
 }
 
 .Contact-us__Form fieldset > *:hover {
